--- a/src/components/Book.astro
+++ b/src/components/Book.astro
@@ -1,6 +1,10 @@
+---
+import bookImg from '../images/daan-evers-booking.jpg'
+---
+ 
  <!-- Book -->
  <section class="book container" id="book">
-    <img src="images/daan-evers-booking.jpg" alt="" class="book-img" />
+    <img src={bookImg.src} alt="" class="book-img" />
     <div class="book-overlay"></div>
     <div class="book-data">
       <h2>
