--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -1,3 +1,9 @@
+---
+import team1 from '../images/team-1.png'
+import team2 from '../images/team-2.png'
+import team3 from '../images/team-3.png'
+---
+
 <!-- Team -->
 <section class="team container" id="team">
     <div class="heading">
@@ -6,7 +12,7 @@
     <!-- Team Content -->
     <div class="team-content">
       <div class="team-box">
-        <img src="images/team-1.png" alt="" />
+        <img src={team1.src} alt="" />
         <h2>Sara Zones</h2>
         <span>Co- Lead chef</span>
         <p>
@@ -15,7 +21,7 @@
         </p>
       </div>
       <div class="team-box">
-        <img src="images/team-2.png" alt="" />
+        <img src={team2.src} alt="" />
         <h2>Selena Zones</h2>
         <span>Lead chef</span>
         <p>
@@ -24,7 +30,7 @@
         </p>
       </div>
       <div class="team-box">
-        <img src="images/team-3.png" alt="" />
+        <img src={team3.src} alt="" />
         <h2>Taylor Zone</h2>
         <span>Co- Lead chef</span>
         <p>
