--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -128,6 +128,7 @@ header {
     ),
     url("../images/nick-hillier-hero-image.jpg");
   background-size: cover;
+  border-radius: 5%;
 }
 .home-text h1 {
   font-size: 3.5rem;
